--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "artist-portfolio",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-common-types": "^6.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -17,6 +18,7 @@
     "@types/react": "^18.0.28",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "install": "^0.13.0",
