--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-common-types": "^6.3.0",
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -22,6 +23,7 @@
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "install": "^0.13.0",
+    "mdb-react-ui-kit": "^6.0.0",
     "npm": "^9.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
