--- a/package.json
+++ b/package.json
@@ -4,32 +4,33 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-common-types": "^6.3.0",
+    "@fortawesome/fontawesome-common-types": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.4.4",
-    "@types/node": "^18.15.3",
-    "@types/react": "^18.0.28",
-    "@types/react-bootstrap": "^0.32.32",
-    "@types/react-dom": "^18.0.11",
-    "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^18.18.5",
+    "@types/react": "^18.2.28",
+    "@types/react-bootstrap": "^0.32.33",
+    "@types/react-dom": "^18.2.13",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "install": "^0.13.0",
-    "npm": "^9.6.2",
+    "node": "^20.7.0",
+    "npm-check": "^6.0.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^3.3.0"
+    "typescript": "^5.2.2",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
