--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-common-types": "^6.4.2",
     "@emailjs/browser": "^3.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/fontawesome-common-types": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
@@ -23,16 +23,15 @@
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "install": "^0.13.0",
+    "mdb-react-ui-kit": "^6.3.0",
     "node": "^20.7.0",
-    "npm-check": "^6.0.1",
-    "mdb-react-ui-kit": "^6.0.0",
     "npm": "^9.6.2",
+    "npm-check": "^3.2.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.2.2",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
@@ -59,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.9.5"
   }
 }
